# redirect

./: .env  .env.example  .gitignore  AGENTS.md  docker-compose.yaml  go.work  go.work.sum
apps/analytics/: README.md  migrate.py  pyproject.toml
apps/analytics/cmd/: migrate.py
apps/analytics/migrations/: 0001_create_redirect_stats.sql  0002_modify_redirect_stats_order_by.sql  0004_modify_ua_data.sql  0005_rename_redirect_stats_to_redirect_events.sql
apps/analytics/src/: clickhouse.py  settings.py
apps/analytics/src/ip/: schemas.py  service.py
apps/analytics/src/redirect_events/: dependencies.py  repository.py  schemas.py
apps/api-backend/: README.md  pyproject.toml
apps/api-backend/cmd/: run.py
apps/api-backend/command/: run.py
apps/api-backend/config/: logging.yaml
apps/api-backend/migrations/: env.py
apps/api-backend/migrations/versions/: 49b4739e7266_link_users_to_links.py  5447d9a744a5_add_user_model.py  b28c10f6efee_init.py
apps/api-backend/src/: api.py  args.py  db.py  dependencies.py  exception_registry.py  exceptions.py  logging.py  main.py  models.py  schemas.py  settings.py  unit_of_work.py
apps/api-backend/src/auth/: cryptography.py  dependencies.py  exception_handlers.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py  token.py
apps/api-backend/src/redirect_link/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py  short_code.py
apps/api-backend/test/: conftest.py
apps/api-backend/test/auth/: test_service.py
apps/api-backend/test/redirect_link/: test_service.py
apps/api-redirect/: README.md
apps/api-redirect/internal/config/: config.go
apps/api-redirect/internal/domain/: redirect_event.go
apps/api-redirect/internal/handler/: redirect.go
apps/api-redirect/internal/middleware/: start_time.go  timeout.go
apps/api-redirect/internal/repository/: postgresql.go
apps/api-redirect/internal/service/: analytics.go  redirect.go
apps/frontend/: .gitignore  README.md  components.json  eslint.config.mjs  openapi.json  package-lock.json  package.json  tsconfig.json
apps/frontend/src/app/: globals.css  layout.tsx  list.tsx  page.tsx  providers.tsx
apps/frontend/src/app/(protected)/: layout.tsx  page.tsx
apps/frontend/src/app/auth/: layout.tsx  page.tsx
apps/frontend/src/app/hydrate-user/: hydrated-child.tsx  page.tsx
apps/frontend/src/components/auth/: AuthForm.tsx  LoginForm.tsx  RegisterForm.tsx  auth-guard.tsx  login-form.tsx  register-form.tsx  unathenticated-fallback.tsx
apps/frontend/src/components/common/: loading-fallback.tsx
apps/frontend/src/components/sidebar/: application-sidebar.tsx  user-section.tsx
apps/frontend/src/components/themes/: shadcn.css  theme-provider.tsx
apps/frontend/src/components/ui/: button.tsx  card.tsx  field.tsx  input.tsx  label.tsx  layout.tsx  separator.tsx  (+6 more)
apps/frontend/src/hooks/: use-auth.ts  use-mobile.ts  use-user.ts
apps/frontend/src/lib/: utils.ts
apps/frontend/src/providers/: auth-provider.tsx
services/consumer-service/migrations/: 0003_modify_ip_data.sql
services/consumer-service/src/: clickhouse.py  main.py  settings.py
services/consumer-service/src/ip/: schemas.py  service.py
services/consumer-service/src/ip_locator/: __init__.py  ip_locator.py  schemas.py
services/consumer-service/src/redirect_events/: service.py  task.py
services/consumer-service/src/redirects/: dependencies.py  repository.py  schemas.py  service.py  task.py
services/consumer-service/src/schemas/: redirect_data.py
services/consumer-service/src/store_redirect/: repository.py  schemas.py  task.py
services/consumer-service/src/user_agent/: schemas.py  service.py
services/frontend/: package-lock.json  package.json
services/frontend/src/app/: globals.css  layout.tsx  list.tsx  page.tsx  providers.tsx
services/manager-service/: pyproject.toml
services/manager-service/migrations/: env.py
services/manager-service/migrations/versions/: 8366da335489_update_name_and_id.py  fc800c011c73_create_redirect_url_model.py
services/manager-service/src/: api.py  db.py  dependencies.py  exceptions.py  main.py  schemas.py  settings.py  unit_of_work.py
services/manager-service/src/redirect_link/: models.py  routes.py  short_code.py
services/manager-service/src/redirect_url/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
services/manager-service/tests/: test_redirect_routes.py
services/redirect-service/: go.mod  go.sum  main.go
services/redirect-service/cmd/redirect/: main.go
services/redirect-service/internal/broker/: rabbitmq.go  redirect_producer.go
services/redirect-service/internal/config/: config.go
services/redirect-service/internal/domain/: redirect.go  redirect_link.go
services/redirect-service/internal/handler/: handler.go  redirect_handler.go
services/redirect-service/internal/repository/: postgresql.go  redirect_repository.go
services/redirect-service/internal/service/: analytics_service.go  redirect.go  redirect_service.go  redirect_service_test.go
(+20 files in other folders)
