[project]
name = "analytics"
version = "0.1.0"
description = "Celery service to collect user redirect events"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acceptlang>=0.0.5",
    "celery>=5.6.2",
    "celery-batches>=0.11",
    "clickhouse-connect>=0.10.0",
    "clickhouse-migrations>=0.9.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "user-agents>=2.2.0",
]
