[project]
name = "analytics"
version = "0.1.0"
description = "Celery service to collect user redirect events"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acceptlang>=0.0.5",
    "celery>=5.6.2",
    "celery-batches>=0.11",
    "clickhouse-connect>=0.10.0",
    "clickhouse-migrations>=0.9.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "celery -A cmd.main worker --loglevel=info"
migrate = "python -m cmd.migrate"

lint = "ruff check src tests"
lint-fix = "ruff check src tests --fix"
test = "pytest tests"
test-coverage = "pytest --cov=src tests && coverage html"

list = "task --list"
