[project]
name = "api-backend"
version = "0.1.0"
description = "API service to manage redirect links"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi-limiter>=0.2.0",
    "fastapi[standard]>=0.128.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.12.1",
    "rich>=14.3.1",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]

[tool.taskipy.tasks]
start = "python -m command.run"

migrate-to-head = "alembic upgrade head"
migrate-to = "alembic upgrade"
migrate-downgrade-to = "alembic downgrade"
migrate-revision = "alembic revision --autogenerate -m"
migrate-check-current = "alembic current"
migrate-check-history = "alembic history"

lint = "ruff check src test"
lint-fix = "ruff check src test --fix"
test = "pytest -v"
test-coverage = "pytest --cov && coverage html"

list = "task --list"
