[project]
name = "manager-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
]
